<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeight"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/communities"/>

        <RadioGroup
            android:id="@+id/radioGroupVisibility"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4">

            <RadioButton
                android:id="@+id/radioButtonAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/to_all"/>

            <RadioButton
                android:id="@+id/radioButtonOnlyThese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/only_these_communities"/>

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCommunities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"/>


</LinearLayout>