<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/feedbackContent">

    <include layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/feedbackLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <android.support.v7.widget.CardView

                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardElevation="4dp"
                android:id="@+id/driverCard">

                <LinearLayout
                    android:id="@+id/driverContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/carRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/rateTheCar"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/primary" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <TextView
                            android:id="@+id/textViewDriving"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/driving"
                            android:textColor="@color/black" />

                        <RatingBar
                            android:id="@+id/ratingBar"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/carQuestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/was_it_the_same"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/black" />

                    <RadioGroup
                        android:id="@+id/sameCarYorN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom">
                        <android.support.v7.widget.AppCompatRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/yesButton"
                            android:text="Yes"/>
                        <android.support.v7.widget.AppCompatRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/noButton"
                            android:text="No"/>

                    </RadioGroup>

                    <TextView
                        android:id="@+id/IfNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/if_no"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/black"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/theDifferences"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/what_difference"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/black"
                        android:visibility="invisible" />

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/checkboxCarModel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Car model"
                        android:visibility="invisible"/>
                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/checkboxCarPlateNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Car plate number"
                        android:visibility="invisible"/>
                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/checkboxCarAc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="AC"
                        android:visibility="invisible"/>


                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>